fix: portrait margin on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -86,6 +86,7 @@ body {
     margin-bottom: 2rem;
     width: 10rem;
     height: 10rem;
+    margin-right: 0;
   }
 
   .name {
